
* xx/xx/2025 1.0.0
- Switch Qt6 (redpanther)
- Switch to cmake build system
- Use C++17
- Add compile script for easy compiling and rpm/deb creation
- Use pkgconfig for spec file.
- Code clean up and change project structure
- Cleanup UI
- Add test framwork to test decoders
- Fix mouse wheel zooming in graph
- Fix manual serial settings load/restore
- Export file in ms precision (to support more than 1S/s)
- Add support for hold, auto/manual range, continuity test, combined ac+dc, Fahrenheit
- Added HoldPeak HP-90EPC (tstenner).
- Added UniTrend UT61B and UT61D and Metex-3840 (ported from 0.9.2 original branch)
- Added UniTrend UT61E, UT803, UT804, UT70B, UT71B/C/D/E (redpanther)
- Added Voltcraft VC960
- Added PeakTech 3315
- Added basic support for DTM0660 based DMMs
- Rename UniTrend UT30A/E to UT60A/E, because UT30 has no data port
- basic support for different interfaces. currently: serial, hid and rfc2217.
- support for USB-HID based interfaces
- support for RFC2217 remote serial port

* 30/10/2016 0.9.7
- Added Voltcraft VC870 (Florian Evers)
- Added VA symbols to display apparent power
- Added cosphi symbols to display the power factor

* 28/01/2016 0.9.6
- Code clean up
- Fix translation loading
- Fix message handler
- Fix file export (leading zero of the time stamp)
- Fix console logging on Windows
- Remove 1/10s sample rate -> don't work with most devices
- Use infinity sign to set endless recoder
- Fix hang of M-4660A

* 14/07/2015 0.9.5
- Port to Qt5
- Use C++14
- Add translation support

* 27/04/2014 0.9.0
- QtDMM was ported to Qt4.x (still a few minor bugs, but usable)
- QtDMM was relicensed from GPL 2.0 to GPL 3
- Added TekPower TP4000ZC / digitek DT4000ZC
- Added PeakTech 3430

* 11/07/2009 0.8.14
- terminal flags
- VC 920

* 11/07/2009 0.8.13
- One hour recording crash bug
- Metex M-4650C settings (Samuel Hildebrandt)
- Tenma 72-1016 settings (simon morris)
- Metex M-3870D settings (Zdeněk Šigut)

* 25/12/2007 0.8.12